[Lesson3] Fix: removed card section bg styling through style; Moved error showing logic to a const; Converted stylings to px; Added isVisible to Error on Error Page

--- a/src/pages/landing/ui/cards-section/cards-section.module.scss
+++ b/src/pages/landing/ui/cards-section/cards-section.module.scss
@@ -1,6 +1,10 @@
 @use '@shared/styles/mixins' as *;
 @use '@shared/styles/breakpoints-mixins' as *;
 
+.cards-section {
+  background-color: var(--color-secondary-700);
+}
+
 .cards-container {
   flex-wrap: wrap;
   width: 100%;
