--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -13,12 +13,12 @@
 
   /* font-sizes variables */
 
-  --font-size-xs: 0.5rem; /* 8px */
-  --font-size-sm: 0.75rem; /* 12px */
-  --font-size-md: 1rem; /* 16px */
-  --font-size-lg: 1.25rem; /* 20px */
-  --font-size-xl: 1.5rem; /* 24px */
-  --font-size-2xl: 2rem; /* 32px */
-  --font-size-3xl: 2.5rem; /* 40px */
-  --font-size-4xl: 3rem; /* 48px */
+  --font-size-xs: 8px;
+  --font-size-sm: 12px;
+  --font-size-md: 16px;
+  --font-size-lg: 20px;
+  --font-size-xl: 24px;
+  --font-size-2xl: 32px;
+  --font-size-3xl: 40px;
+  --font-size-4xl: 48px;
 }
